Añadir componente sedes y hosting rirebase

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar [perfil]="perfil" ></app-navbar>
 <div class="menu-bg col s-12 animated fadeIn fast">
 
     <div class="perfil row col s12 ">
