--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -4,8 +4,8 @@
     <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a [routerLink]="['/taller']" routerLinkActive="router-link-active">Talleres</a></li>
-      <li><a href="badges.html">Sedes</a></li>
-      <li><a href="collapsible.html">Contacto</a></li>
+      <li><a [routerLink]="['/sede']" routerLinkActive="router-link-active" >Sedes</a></li>
+      
       <li><a (click)="logOut()">Salir</a></li>
     </ul>
   </div>
@@ -30,16 +30,17 @@
   <li>
     <div class="user-view">
       <div class="background">
-        <img src="images/office.jpg">
+        <!-- <img [src]="perfil.IMG_ALUMNO"> -->
       </div>
-      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-      <a href="#name"><span class="white-text name">John Doe</span></a>
-      <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
+      <a><img class="circle" [src]="perfil.IMG_ALUMNO"></a>
+      <a><span class="white-text name">{{ perfil.NOMB_ALUMNO }}</span></a>
+      <a><span class="white-text email">{{ perfil.CORREO_ALUMNO }}</span></a>
     </div>
   </li>
-  <li><a href="sass.html">Talleres</a></li>
-  <li><a href="badges.html">Sedes</a></li>
-  <li><a href="collapsible.html">Contacto</a></li>
+  <li><a class="white-text" [routerLink]="['/taller']" routerLinkActive="router-link-active">Talleres</a></li>
+  <li><a class="white-text" [routerLink]="['/sede']" routerLinkActive="router-link-active">Sedes</a></li>
+  <li><a class="white-text" (click)="logOut()">Salir</a></li>
 </ul>
 
 <!-- <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
+
