--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: rgba(242, 245, 249, 1);
 }
 
 /* Animaciones */
